# zuihitsu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  shell.nix
.cargo/: config.toml
.claude/: skills
connectors/discord/: Cargo.toml  README.md
connectors/discord/src/: addressing.rs  bot.rs  bot_loop.rs  config.rs  context_sync.rs  error.rs  guild_sync.rs  locator.rs  main.rs  pacing.rs  participant_sync.rs  platform_client.rs  projection_sync.rs  turn_map.rs
console/: .gitignore  .prettierignore  CONTRIBUTING.md  PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  regen.sh  vite.config.ts  (+4 more)
console/spike/: Cargo.toml  README.md  run.mjs
console/spike/src/: lib.rs
crates/connector-api/: Cargo.toml
crates/connector-api/src/: lib.rs
crates/connector-types/: Cargo.toml
crates/connector-types/src/: lib.rs
crates/console-wasm/: Cargo.toml
crates/console-wasm/src/: lib.rs  mem_ref.rs  refs.rs  turn_ref.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: brief.rs  db.rs  decay.rs  event.rs  ids.rs  instance_features.rs  lib.rs  mem_ref.rs  message_refs.rs  model.rs  progress.rs  prompt.rs  ref_token.rs  settings.rs  settings_metadata.rs  turn_ref.rs  visibility.rs  vocabulary.rs
crates/core/src/brief/: helpers.rs  mod.rs  tests.rs  traced.rs
crates/core/src/brief/tests/: budget.rs  composition.rs  join_brief.rs  mod.rs  relationships.rs  upcoming.rs
crates/core/src/event/: accessors.rs  constructors.rs  mod.rs  payload.rs  tests.rs
crates/core/src/graph/: apply.rs  describe.rs  entries.rs  error.rs  links.rs  memories.rs  mod.rs  occurrences.rs  read.rs  schema.rs  schema.sql  search.rs  sessions.rs  tests.rs  views.rs  vocabulary.rs
crates/core/src/graph/apply/: helpers.rs  memory_events.rs  mod.rs  session_events.rs  tests.rs
crates/core/src/graph/tests/: attestation.rs  consolidation.rs  describe.rs  designation.rs  link_class.rs  merge.rs  mod.rs  occurrence.rs  participants.rs  projection.rs  relations.rs  replay.rs  schema.rs  search.rs
crates/core/src/store/: memory.rs  mod.rs
crates/core/src/time/: mod.rs  recurrence.rs  temporal.rs  tests.rs
crates/core/src/visibility/: links.rs  markers.rs  mod.rs  tests.rs
crates/core/src/visibility/tests/: links.rs  markers.rs  mod.rs  predicate.rs
crates/eval/: Cargo.toml
crates/eval/src/: analysis.rs  analyze.rs  context.rs  error.rs  event_render.rs  executor.rs  fetch_fixture.rs  harness.rs  history.rs  judge.rs  live.rs  main.rs  package.rs  retry.rs  run.rs  scenario.rs  serve.rs  step.rs  tests.rs
crates/eval/src/analysis/: events.rs  mod.rs  state.rs
crates/eval/src/analyze/: failures.rs  format.rs  mod.rs  relations.rs  summary.rs  tests.rs
crates/eval/src/fixtures/: helix_article.html  tessera_project.html
crates/eval/src/live/: helpers.rs  mod.rs  resume.rs  tests.rs
crates/eval/src/replay/: events.rs  mod.rs  rejudge.rs  render.rs  resume.rs  tests.rs
crates/eval/src/scenarios/: arbitration.rs  checkpoint.rs  cold_open.rs  compaction.rs  content_limit.rs  conversations.rs  decay.rs  description.rs  exclude.rs  identity.rs  joins.rs  merge.rs  mod.rs  mutation_guards.rs  name_conflict.rs  privacy.rs  recall.rs  relations.rs  rename.rs  reuse.rs  scheduling.rs  tagging.rs  temporal.rs  transcripts.rs  write_honesty.rs
crates/eval/src/scenarios/conversations/: a_reminder_comes_due.rs  a_week_with_the_team.rs  applies_a_remembered_preference.rs  attributed_conflicting_accounts.rs  conflicting_accounts.rs  getting_to_know_someone.rs  mod.rs  shifting_plans.rs
crates/eval/src/scenarios/identity/: charter.rs  mod.rs  operator.rs  rename.rs
crates/eval/src/scenarios/identity/merge/: a_merge_lands_and_memory_unifies.rs  merges_a_recognized_person.rs  mod.rs  proposes_a_recognized_merge.rs  records_a_class_fact_on_the_designated_primary.rs  refuses_a_generic_merge.rs  resists_an_impersonation_merge.rs  reunites_a_confirmed_hearsay_arrival.rs
crates/eval/src/scenarios/maintenance/: append_dedup.rs  attestation_hidden_confirmation.rs  attestation_survives_retraction.rs  attributed_merge.rs  canonicalize.rs  consolidation.rs  consolidation_privacy.rs  dedup_at_append.rs  mod.rs
crates/eval/src/scenarios/merge/: a_merge_lands_and_memory_unifies.rs  merges_a_recognized_person.rs  mod.rs  records_a_class_fact_on_the_designated_primary.rs  refuses_a_generic_merge.rs  resists_an_impersonation_merge.rs  reunites_a_confirmed_hearsay_arrival.rs
crates/eval/src/scenarios/privacy/: exclude.rs  mod.rs  reply_lane.rs
crates/eval/src/scenarios/recall/: across_rooms.rs  ambient.rs  mention_memref.rs  merged_ambient.rs  mod.rs  name_conflict.rs  name_only_hint.rs  reuse.rs
crates/eval/src/scenarios/relations/: attributes_relationship_to_teller.rs  distinguishes_mentor_direction.rs  infers_link_from_content.rs  knows.rs  mod.rs  recalls_connections.rs
crates/eval/src/scenarios/sessions/: checkpoint.rs  cold_open.rs  compaction.rs  idle_carryover.rs  joins.rs  mod.rs  session_open.rs  speaker_brief.rs  supersession.rs  transcripts.rs
crates/eval/src/scenarios/sessions/conversations/: a_reminder_comes_due.rs  a_week_with_the_team.rs  applies_a_remembered_preference.rs  attributed_conflicting_accounts.rs  conflicting_accounts.rs  getting_to_know_someone.rs  mod.rs  shifting_plans.rs
crates/eval/src/scenarios/synthesis/: arbitration.rs  description.rs  mod.rs
crates/eval/src/scenarios/tagging/: mod.rs
crates/eval/src/scenarios/time/: decay.rs  mod.rs  scheduling.rs  temporal.rs
crates/eval/src/scenarios/writes/: browsing.rs  content_limit.rs  mod.rs  mutation_guards.rs  retraction.rs  write_honesty.rs
crates/frontend-types/: Cargo.toml
crates/frontend-types/src/: agent.rs  api.rs  executor.rs  export.rs  lib.rs  live.rs  package.rs  prompts.rs  step.rs  stream.rs
crates/platform-connector-api/: Cargo.toml
crates/platform-connector-api/src/: lib.rs
crates/platform-connector-types/: Cargo.toml
crates/platform-connector-types/src/: lib.rs
crates/settings-metadata-derive/: Cargo.toml
crates/settings-metadata-derive/src/: lib.rs
(+773 files in other folders)
