[package]
name = "zuihitsu"
version = "0.1.0"
edition = "2024"

[lib]
name = "zuihitsu"
path = "src/lib.rs"

[[bin]]
name = "zuihitsu"
path = "src/main.rs"

[dependencies]
async-openai = { version = "0.40.2", default-features = false, features = [
    "byot",
    "rustls",
    "chat-completion",
    "embedding",
] }
async-trait = "0.1.89"
axum = { version = "0.8" }
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
jiff = "0.2.28"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serde", "async", "send"] }
parking_lot = "0.12.5"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
smol_str = { version = "0.3.6", features = ["serde"] }
sqlite-vec = "=0.1.6"
tokio = { version = "1.52.3", features = [
    "process",
    "io-util",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
tower = { version = "0.5", features = ["util"] }
