[workspace]
members = ["crates/core", "crates/console-wasm", "crates/eval"]

# Dependencies shared across the workspace crates live here, so their versions cannot drift.
# Per-crate feature sets are added at the use site (features union across the workspace).
[workspace.dependencies]
anstream = "1.0"
anstyle = "1.0"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.28"
parking_lot = "0.12.5"
proptest = "1.11"
rusqlite = { version = "0.40.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
smol_str = { version = "0.3.6", features = ["serde"] }
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ts-rs = "11.0"
ulid = { version = "1.2.1", features = ["serde"] }
# The wasm-compatible materializer core, shared by the main crate and (later) the console-wasm
# wrapper. Path dep so a local checkout always builds against the in-tree version.
zuihitsu-core = { path = "crates/core" }

[package]
name = "zuihitsu"
version = "0.1.0"
edition = "2024"

[lib]
name = "zuihitsu"
path = "src/lib.rs"

[[bin]]
name = "zuihitsu"
path = "src/main.rs"

# The `ts` feature exports the event-log wire types to TypeScript via ts-rs, so the debugger/eval
# viewer shares the agent's exact type contract. Off by default — only the eval crate enables it; the
# main binary never carries ts-rs.
[features]
ts = ["dep:ts-rs", "zuihitsu-core/ts"]

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
async-openai = { version = "0.40.2", default-features = false, features = [
    "byot",
    "rustls",
    "chat-completion",
    "embedding",
] }
async-stream = "0.3"
async-trait = { workspace = true }
axum = { version = "0.8" }
clap = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
dom_smoothie = "0.18"
fs2 = "0.4.3"
htmd = "0.5"
jiff = { workspace = true }
mlua = { version = "0.11.6", features = ["luau", "serde", "async", "send"] }
parking_lot = { workspace = true }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
    "webpki-roots",
    "gzip",
    "brotli",
    "stream",
] }
rusqlite = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smol_str = { workspace = true }
sqlite-vec = "=0.1.6"
tokio = { workspace = true, features = [
    "process",
    "io-util",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
stop-words = "0.10"
toml = "1.1.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true, optional = true }
ulid = { workspace = true }
url = "2.5"
whatlang = "0.18"
zuihitsu-core = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util"] }
tower = { version = "0.5", features = ["util"] }
# The Store-seam contract helpers, so SqliteStore's tests reuse the same checks as the in-memory
# backend (see crates/core/src/store/mod.rs).
zuihitsu-core = { workspace = true, features = ["test-support"] }
