# A workspace member (shares the root target directory). Throwaway: its only job is to answer
# whether rusqlite talks to SQLite under wasm32-unknown-unknown, en route to the real console-wasm
# wrapper crate described in console/PLAN.md.
[package]
name = "wasm-sqlite-spike"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Same major as the zuihitsu workspace (0.40), so a green result here transfers. `bundled` is the
# feature that on a native target compiles the C amalgamation; on wasm32-unknown-unknown,
# libsqlite3-sys 0.38's default `ffi-sqlite-wasm-rs` is meant to swap in sqlite-wasm-rs instead.
rusqlite = { version = "0.40.0", features = ["bundled"] }
# Pinned to the wasm-bindgen CLI on PATH — the glue generator and the crate must match exactly.
wasm-bindgen = "=0.2.117"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
