[package]
name = "zuihitsu-connector-api"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls",
    "webpki-roots",
    "json",
    "stream",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
zuihitsu-core = { workspace = true }
zuihitsu-connector-types = { path = "../connector-types" }
