# The console's WASM bridge: a wasm-bindgen API over zuihitsu-core's materializer, so the frontend
# folds an event log into queryable graph state with the agent's own projection code (see
# console/CONTRIBUTING.md). Built by the main crate's `build.rs` via `wasm-bindgen-cli-support`
# (in-process, no shell-out) and `wasm-opt` (the Rust crate); the generated package lives in
# `console/packages/wire/wasm/` (gitignored, built fresh by CI).
[package]
name = "console-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
# cdylib for the wasm artifact; rlib so the crate is unit-testable on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
zuihitsu-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
# Pinned alongside `wasm-bindgen-cli-support` in the workspace — the glue generator and the crate
# must produce compatible output.
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
# Derives the wasm ABI and the TypeScript declaration for the query DTOs in `types` from one
# definition, so the boundary is typed without a hand-written TS mirror or a `JsValue` cast.
tsify-next = { workspace = true }
