# The wasm-compatible core of the agent: the event-log wire types, the materialized graph, and the
# pure projection logic the console replays in the browser (see console/CONTRIBUTING.md). Deliberately free
# of the host-only machinery (mlua, tokio, reqwest, axum, async-openai, file-backed SQLite), so it
# compiles to wasm32-unknown-unknown. The main `zuihitsu` crate depends on this and re-exports it, so
# the rest of the codebase reaches these types at their existing paths.
[package]
name = "zuihitsu-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "zuihitsu_core"
path = "src/lib.rs"

# The `ts` feature exports the wire types to TypeScript via ts-rs; the main crate's `ts` feature
# enables it, and the eval crate turns that on to regenerate the console's type contract.
[features]
ts = ["dep:ts-rs"]
# Exposes the `Store` seam contract helpers so the main crate's SqliteStore tests run the same
# checks the in-memory backend does, rather than re-deriving them.
test-support = []

[dependencies]
jiff = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }
ulid = { workspace = true }

# Property tests for the pure value logic (the turn-reference parser), run on the host only.
[dev-dependencies]
proptest = { workspace = true }

# On wasm, ulid's ULID generation reaches getrandom, which needs its browser backend turned on
# explicitly (paired with the `getrandom_backend="wasm_js"` cfg in .cargo/config.toml). The console
# replica only ever parses existing ULIDs, never generates, but the code still links getrandom.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
