[package]
name = "zuihitsu-eval"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eval"
path = "src/main.rs"

[dependencies]
zuihitsu = { path = "../..", features = ["ts"] }
async-trait = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true }
