[package]
name = "zuihitsu-eval"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eval"
path = "src/main.rs"

[dependencies]
zuihitsu = { path = "../..", features = ["ts"] }
anstream = { workspace = true }
anstyle = { workspace = true }
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = { workspace = true }
axum = "0.8"
clap = { workspace = true }
parking_lot = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true }
