[package]
name = "zuihitsu-eval"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eval"
path = "src/main.rs"

[dependencies]
zuihitsu = { path = "../..", features = ["console"] }
zuihitsu-frontend-types = { path = "../frontend-types", features = ["ts"] }
anstream = { workspace = true }
anstyle = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
rust-embed = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
