[package]
name = "zuihitsu-platform-connector-api"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls",
    "json",
    "stream",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
zuihitsu-core = { workspace = true }
zuihitsu-platform-connector-types = { workspace = true }
