# Connector-facing wire types shared between the main crate, the platform-connector-api crate,
# and the console.
#
# The `ts` feature enables `ts-rs` so the export binary can emit TypeScript bindings.
[package]
name = "zuihitsu-platform-connector-types"
version = "0.1.0"
edition = "2024"

[lib]
name = "zuihitsu_platform_connector_types"
path = "src/lib.rs"

[features]
ts = ["dep:ts-rs", "zuihitsu-core/ts"]

[dependencies]
zuihitsu-core = { workspace = true }
serde = { workspace = true }
ts-rs = { workspace = true, optional = true }
